# evaluator

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/evaluator/: Context.h  EvaluatorDefs.h  Function.h  Tokenizer.h
res/: example.txt
src/: CMakeLists.txt  Context.cpp  Function.cpp  Tokenizer.cpp  main.cpp
